# content_aware_pdf_extraction_pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
